--- a/DQD/MainPage.xaml
+++ b/DQD/MainPage.xaml
@@ -159,7 +159,7 @@
                                Background="{ThemeResource AppScrollViewerBackground}"
                                SelectionChanged="RootPivot_SelectionChanged"
                                IndicatorLineStroke="{ThemeResource DQDBackground}" 
-                               BackgroundLineStoke="{ThemeResource AppPersonalExtraBackground02}"
+                               BackgroundLineStoke="Transparent"
                                IndicatorLineStokeThickness="5"
                                Style="{ThemeResource BottemPV}">
                     <Pivot.HeaderTemplate>
@@ -392,12 +392,15 @@
                                Margin="0,5,5,5"
                                TextWrapping="WrapWholeWords"
                                Text="DQD-UWP绝对不会加入广告功能(*^_^*)"/>
+                            <TextBlock Name="VersionText"
+                                FontSize="16"
+                                Margin="0,15,5,5"
+                                TextWrapping="WrapWholeWords"
+                                FontWeight="SemiBold">版本号：由代码生成</TextBlock>
                             <TextBlock FontWeight="Thin"
                                FontSize="16"
                                Margin="0,15,5,5"
                                TextWrapping="WrapWholeWords">
-                        <Run Text="版本号：1.0.1017"/><LineBreak/>
-                        <LineBreak/>
                         <Run Text="待解决的问题：" FontSize="14"/><LineBreak/>
                         <Run Text="1）所有评论加载存在问题" FontSize="12"/><LineBreak/>
                         <Run Text="2）YouKu视频暂时无法支持" FontSize="12"/><LineBreak/>
