--- a/DQD/Pages/VideoPage.xaml
+++ b/DQD/Pages/VideoPage.xaml
@@ -3,11 +3,108 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DQD.Net.Pages"
+    xmlns:model="using:DQD.Core.Models"
+    xmlns:MPV="using:DQD.Core.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text=" 开发中" FontSize="50"/>
+    <Page.Resources>
+        <CollectionViewSource x:Name="ListResources"/>
+        <CollectionViewSource x:Name="HeaderResources"/>
+    </Page.Resources>
+
+    <Grid x:Name="grid" 
+          SizeChanged="grid_SizeChanged"
+          Background="{ThemeResource AppPersonalExtraBackground02}">
+
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="VisualStateGroup">
+                <VisualState x:Name="Mobile360">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="Mobile480">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="361"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="Desktop">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowHeight="400" MinWindowWidth="800"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+
+        <Pivot Name="MyPivot" 
+               Width="{Binding Width, ElementName=grid ,Mode=OneWay}"
+               ItemsSource="{Binding Source={StaticResource HeaderResources}}"
+               SelectionChanged="MyPivot_SelectionChanged">
+            <Pivot.HeaderTemplate>
+                <DataTemplate x:DataType="model:HeaderModel">
+                    <TextBlock Text="{Binding Title}"
+                               Margin="0,0,0,5" 
+                               TextAlignment="Center" 
+                               FontSize="16"
+                               Width="55"
+                               Foreground="{ThemeResource AppPersonalTextColorPure02}"/>
+                </DataTemplate>
+            </Pivot.HeaderTemplate>
+            <Pivot.ItemTemplate>
+                <DataTemplate x:DataType="model:HeaderModel" >
+                    <ListView x:Name="ContentListView" 
+                              ItemsSource="{Binding Source={StaticResource ListResources}}"
+                              ItemContainerStyle="{ThemeResource SpecialListViewItemExpanded}"
+                              SelectionMode="None" 
+                              IsItemClickEnabled="True"
+                              ItemClick="ListView_ItemClick">
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="model:ContentListModel">
+                                <Grid HorizontalAlignment="Stretch">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="5*"/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="2*"/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+                                    <TextBlock Text="{Binding Title}" 
+                                               Grid.Row="0" 
+                                               Grid.Column="1"
+                                               Margin="3"
+                                               TextWrapping="WrapWholeWords"/>
+                                    <TextBlock Text="{Binding Date}" 
+                                               Grid.Row="1" 
+                                               Grid.Column="1"
+                                               Margin="3"
+                                               FontSize="14"
+                                               Foreground="{ThemeResource DQDSummTextColor}"/>
+                                    <Image Source="{Binding Image}" 
+                                               Grid.Column="0"
+                                               Grid.RowSpan="2" 
+                                               Margin="2"/>
+                                    <Button Content="{Binding ShareNum}" 
+                                            Grid.RowSpan="2" 
+                                            Grid.ColumnSpan="3"
+                                            Background="Transparent"
+                                            HorizontalAlignment="Right"
+                                            Foreground="{ThemeResource DQDBackground}"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </DataTemplate>
+            </Pivot.ItemTemplate>
+        </Pivot>
     </Grid>
 </Page>
