--- a/DQD/Pages/DataPage.xaml
+++ b/DQD/Pages/DataPage.xaml
@@ -3,11 +3,40 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DQD.Net.Pages"
+    xmlns:model="using:DQD.Core.Models.TeamModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text=" 开发中" FontSize="50"/>
+    <Page.Resources>
+        <CollectionViewSource x:Name="ListResources"/>
+    </Page.Resources>
+
+    <Grid Background="{ThemeResource AppPersonalExtraBackground02}">
+        <GridView Name="ListView"
+                  ItemsSource="{Binding Source={StaticResource ListResources}}"
+                  ItemContainerStyle="{ThemeResource SpecialGridViewItemExpanded}"
+                  IsItemClickEnabled="True"
+                  SelectionMode="None"
+                  HorizontalAlignment="Center" 
+                  VerticalAlignment="Center" 
+                  Margin="0,10,0,0"
+                  ItemClick="ListView_ItemClick">
+            <GridView.ItemTemplate>
+                <DataTemplate x:DataType="model:LeagueModel" >
+                    <Border CornerRadius="0"
+                            Width="110"
+                            Height="50"
+                            Margin="0,0,0,0">
+                        <TextBlock Text="{Binding LeagueName}"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Top"
+                                   FontSize="17"
+                                   Margin="0,14,0,0"
+                                   FontWeight="Thin"/>
+                    </Border>
+                </DataTemplate>
+            </GridView.ItemTemplate>
+        </GridView>
     </Grid>
 </Page>
