--- a/DQD/Dictionaries/PersonalTheme.xaml
+++ b/DQD/Dictionaries/PersonalTheme.xaml
@@ -64,6 +64,14 @@
             <SolidColorBrush x:Key="DQDPopupBackColor" Color="#BB000000"/>
             <!--DQDReTextColor-->
             <SolidColorBrush x:Key="DQDReTextColor" Color="#EFEFEF"/>
+            <!--DQDListTitleColor-->
+            <SolidColorBrush x:Key="DQDListTitleColor" Color="#3333BB73"/>
+            <!--DQDListHeaderColor-->
+            <SolidColorBrush x:Key="DQDListHeaderColor" Color="#DD33BB73"/>
+            <!--DQDListTopColor-->
+            <SolidColorBrush x:Key="DQDListTopColor" Color="#9933BB73"/>
+            <!--DQDListBottomColor-->
+            <SolidColorBrush x:Key="DQDListBottomColor" Color="#4433BB73"/>
             <!--DQDReBackColor-->
             <Color x:Key="DQDReBackColor">#99000000</Color>
 
@@ -135,6 +143,14 @@
             <SolidColorBrush x:Key="DQDPopupBackColor" Color="#BBFFFFFF"/>
             <!--DQDReTextColor-->
             <SolidColorBrush x:Key="DQDReTextColor" Color="#303030"/>
+            <!--DQDListTitleColor-->
+            <SolidColorBrush x:Key="DQDListTitleColor" Color="#3330BB45"/>
+            <!--DQDListHeaderColor-->
+            <SolidColorBrush x:Key="DQDListHeaderColor" Color="#DD30BB45"/>
+            <!--DQDListTopColor-->
+            <SolidColorBrush x:Key="DQDListTopColor" Color="#9930BB45"/>
+            <!--DQDListBottomColor-->
+            <SolidColorBrush x:Key="DQDListBottomColor" Color="#4430BB45"/>
             <!--DQDReBackColor-->
             <Color x:Key="DQDReBackColor">#99FFFFFF</Color>
 
