--- a/DQD/Pages/ContentPage.xaml
+++ b/DQD/Pages/ContentPage.xaml
@@ -9,6 +9,7 @@
     xmlns:control="using:DQD.Core.Controls"
     xmlns:Converters="using:DQD.Core.Tools"
     x:Class="DQD.Net.Pages.ContentPage"
+    xmlns:Shadow="using:XP"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -287,6 +288,66 @@
                 <!--#endregion-->
             </Grid>
         </Popup>
+
+        <StackPanel Width="150" 
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Orientation="Vertical">
+            <Shadow:Shadow Margin="0"
+                           CornerRadius="0.5"
+                           Z_Depth="4">
+                <Shadow:XPButton Width="50"
+                                     Height="50"
+                                     Background="#55ACEE"
+                                     BorderThickness="0"
+                                     CornerRadius="35"
+                                     Foreground="White"
+                                     IconForeground="White"
+                                     IconPosition="OnlyIcon"
+                                     IconSize="30"
+                                     PointerOverBackground="#2599EE"
+                                     PressedBackground="#2099EE">
+                    <Shadow:XPButton.Icon>
+                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE117;"/>
+                    </Shadow:XPButton.Icon>
+                </Shadow:XPButton>
+            </Shadow:Shadow>
+            <Shadow:Shadow Margin="0"
+                           CornerRadius="0.5"
+                           Z_Depth="4">
+                <Shadow:XPButton Width="50"
+                                     Height="50"
+                                     Background="#55ACEE"
+                                     BorderThickness="0"
+                                     CornerRadius="25"
+                                     Foreground="White"
+                                     IconForeground="White"
+                                     IconPosition="OnlyIcon"
+                                     IconSize="30"
+                                     PointerOverBackground="#2599EE"
+                                     PressedBackground="#2099EE">
+                    <Shadow:XPButton.Icon>
+                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE11C;"/>
+                    </Shadow:XPButton.Icon>
+                </Shadow:XPButton>
+            </Shadow:Shadow>
+            <Shadow:Shadow Margin="0"
+                               CornerRadius="0.5"
+                               Z_Depth="4">
+                <Shadow:XPButton Width="50"
+                                     Height="50"
+                                     Background="Orange"
+                                     BorderThickness="0"
+                                     CornerRadius="25"
+                                     Foreground="White"
+                                     Icon="Contact"
+                                     IconForeground="White"
+                                     IconPosition="OnlyIcon"
+                                     IconSize="20"
+                                     PointerOverBackground="DarkOrange"
+                                     PressedBackground="DarkOrange" />
+            </Shadow:Shadow>
+        </StackPanel>
 
     </Grid>
 </Page>
